[tool.poetry]
name = "truflation-trial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.26.0"
yfinance = "^0.2.35"

[tool.poetry.scripts]
start = "truflation_trial.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
